# onramp-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.eval  GROUND_RULES.md  Jenkinsfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
alembic/: alembic.ini  env.py
alembic/versions/: 20260612_0001_create_transcription_workflows.py  20260614_0002_add_stt_report_integration.py  20260616_0003_add_rag_p1_tables.py  20260616_0004_add_conversation_tables.py  20260616_0005_add_confluence_raw_content.py  20260616_0006_generalize_source_document.py  20260618_0007_extend_index_run_progress.py  20260620_0008_add_chat_observations.py  20260621_0009_add_asset_workflow_owner.py  20260621_0009_add_message_answer_format.py  20260621_0010_add_asset_workflow_owner.py  20260621_0011_add_asset_deleting_status.py
app/: config.py  main.py
app/agents/: format_policy.py  graph.py  state.py
app/api/: auth.py  deps.py  metrics.py  slack.py
app/auth/: __init__.py  session.py  session_tokens.py  slack_oidc.py  tenant_registry.py
app/db/: confluence.py  models.py  opensearch.py  postgres.py  qdrant.py  redis.py
app/eval/: __init__.py  chunking_experiment.py  dataset.py  generation_adapter.py  metrics.py  ragas_judge.py  retrieval_adapter.py  router_cache.py  router_diagnostics.py  router_metrics.py  size_sweep.py
app/middleware/: error_handler.py  logging.py  request_id.py
app/models/: asset_history.py  auth.py  ingestion.py  request.py  response.py  transcription.py
app/observability/: __init__.py  chat_observation.py  langfuse.py
app/queue/: constants.py  consumer.py  events.py  outbox.py
app/rag/: chunker.py  classifier.py  cleaner.py  comparison_splitters.py  doc_domain_classifier.py  doc_domain_dryrun.py  domains.py  embedder.py  hybrid_search.py  indexer.py  labels.py  lineage.py  llm_classifier.py  masker.py  rrf.py  version_fit.py
app/services/: asset_deletion_service.py  asset_history_service.py  asset_service.py  chat_observation_service.py  chat_service.py  conversation_service.py  github_index_service.py  index_service.py  ingest_service.py  ingestion_run_service.py  knowledge_graph.py  llm_selector.py  long_report_generator.py  monitoring_service.py  prometheus_metrics.py  rag_index_repository.py  report_service.py  report_worker.py  stt_event_service.py  stt_result_client.py  transcription_service.py
app/storage/: base.py  factory.py  s3.py
app/workers/: ingestion_worker.py  outbox_publisher.py  report_generator.py  stt_event_consumer.py
data/eval/: GOLDENSET_CRITERIA.md  README.md  agentic_qrels.jsonl  agentic_queries.jsonl  baseline.json  baseline.single_label.json  qrels.jsonl  queries.jsonl  router_predictions.jsonl
docs/: RAG_평가_강의노트_정리.md  ingestion.md  local_ingestion.md
scripts/: backfill_parent_content.py  bench_reranker_onnx.py  benchmark_rule_vs_llm.py  bootstrap_golden.py  bootstrap_gt_answers.py  build_reranker_onnx.py  calibrate_answerability.py  chunk_recent_confluence_pages.py  classify_doc_domains.py  compare_domain_classification.py  diagnose_router.py  draft_router_domains.py  enqueue_ingestion.py  eval_agentic_retriever.py  eval_chunking_ab.py  eval_domain_classification.py  eval_domain_filter.py  eval_filter_modes.py  eval_generation.py  eval_generation_langfuse.py  eval_push_dataset.py  eval_retrieval.py  eval_retrieval_langfuse.py  eval_router_domains.py  eval_router_in_loop.py  eval_search_ab.py  eval_single_agentic_ab.py  eval_size_sweep.py  fetch_recent_confluence_pages.py  index_documents_to_opensearch.py  index_github.py  index_recent_confluence_pages.py  ingest_all.sh  ingest_all_local.sh  ingest_status.py  issue_dev_token.py  judge_domain_classification.py  llmops_alert.py  pool_candidates.py  prepare_recent_confluence_pages.py  (+5 more)
scripts/k8s/: README.md  ingest-job.yaml  verify-job.yaml  wipe-stores-job.yaml
scripts/reranker/: README.md  clear.sh  down.sh  set-url.sh  up.sh
tests/: conftest.py
tests/integration/: test_asset_endpoint.py  test_assets_endpoint.py  test_chat_endpoint.py  test_eval_generation.py  test_eval_retrieval.py  test_monitoring_endpoint.py  test_retrieval.py  (+4 more)
(+136 files in other folders)
