[project]
name = "onramp-api"
version = "0.1.0"
description = "자연어 질문에 구조화된 답변을 생성하는 RAG 백엔드 서버"
requires-python = ">=3.11"

dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # LangChain / LangGraph
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",

    # Vector DB / DB
    "qdrant-client>=1.12.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "redis>=5.0",
    "alembic>=1.14.0",

    # RAG
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.13.0",

    # Util
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "factory-boy>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ─── Ruff ───
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ─── Pytest ───
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=app --cov-report=term-missing"

# ─── MyPy ───
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true