[project]
name = "onramp-api"
version = "0.1.0"
description = "자연어 질문에 구조화된 답변을 생성하는 RAG 백엔드 서버"
requires-python = ">=3.11"

dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyJWT>=2.10.0",

    # LangChain / LangGraph
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",

    # Vector DB / DB
    "qdrant-client>=1.12.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "boto3>=1.35.0",
    "redis>=5.0",
    "alembic>=1.14.0",

    # RAG
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.13.0",

    # Util
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
rerank = [
    "sentence-transformers>=3.0",  # bge-reranker-v2-m3 (CrossEncoder)
    # transformers 5.x는 sentence-transformers 5.x와 lazy import 비호환(PreTrainedModel) → 4.x 고정
    "transformers>=4.41,<5",
]

# #60: ONNX(int8) 리랭커 백엔드 — CPU 파드 경량화(opt-in). reranker_backend="onnx"일 때만 필요.
onnx = [
    "optimum[onnxruntime]>=1.20",
    # onnxruntime 1.21+는 io_binding_helper가 torch.int4를 참조 → CPU torch 2.5.1에 없어
    # build_reranker_onnx.py가 AttributeError로 실패. 1.20.x로 고정 (#101)
    "onnxruntime<1.21",
    "onnx>=1.17",
]

# 생성 평가(LLM-judge) 전용 — #C. prod/CI 게이트에 불포함, nightly·수동 실행에서만 설치.
# ragas API churn이 커서 마이너 버전 고정. langchain-openai는 base 의존성에 이미 존재.
eval = [
    "ragas>=0.2,<0.3",
    # ragas 0.2.x는 langchain_community.chat_models.vertexai를 import → 0.4에서 제거됨.
    # 최신 langchain-community(0.4+)가 끌려오면 ragas import가 깨지므로 0.3.x로 고정.
    "langchain-community>=0.3,<0.4",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "factory-boy>=3.3.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ─── Ruff ───
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ─── Pytest ───
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=app --cov-report=term-missing"

# ─── MyPy ───
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
